Add SSL to site, including Comodo badge

--- a/templates/default_site/layouts.group/.site-layout.html
+++ b/templates/default_site/layouts.group/.site-layout.html
@@ -13,12 +13,19 @@
 	<!-- Icons -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 	<!-- Fonts -->
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Cabin%7CBitter%7CTangerine" media="all">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Cabin%7CBitter%7CTangerine" media="all">
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="{stylesheet='styles/styles'}" type="text/css">
 
 	<!--[if lt IE 9]> <script src="assets/js/html5shiv.js"></script> <![endif]-->
+	<!-- Comodo secure seal -->
+  <script type="text/javascript">
+  //<![CDATA[ 
+  var tlJsHost = ((window.location.protocol == "https:") ? "https://secure.comodo.com/" : "http://www.trustlogo.com/");
+  document.write(unescape("%3Cscript src='" + tlJsHost + "trustlogo/javascript/trustlogo.js' type='text/javascript'%3E%3C/script%3E"));
+  //]]>
+  </script>
 </head>
 <body class="{layout:body-class}">
 
@@ -98,6 +105,10 @@
 			</div>
 
 			<div class="col-md-3 widget">
+<script language="JavaScript" type="text/javascript">
+TrustLogo("https://dantonio.net/images/uploads/comodo_secure_seal_113x59_transp.png", "CL1", "none");
+</script>
+<a  href="https://ssl.comodo.com" id="comodoTL">SSL Certificates</a>
 {!--
 				<h3 class="widget-title">Form widget</h3>
 				<div class="widget-body">
@@ -161,8 +172,8 @@
     })();
 </script>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="{path=js/main-min}"></script>
 <script src="{path=js/ekko-lightbox-min}"></script>
 </body>
