--- a/templates/default_site/layouts.group/.site-layout.html
+++ b/templates/default_site/layouts.group/.site-layout.html
@@ -41,10 +41,10 @@
 		<div class="container-fluid">
 			
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#my-navbar"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
 			</div>
 			
-			<div class="navbar-collapse collapse">
+			<div id="my-navbar" class="navbar-collapse collapse">
 				
 				<ul class="nav navbar-nav">
 					<li {if segment_1 == ""} class="active"{/if}><a href="{site_url}">Home</a></li>
