--- a/templates/default_site/layouts.group/.site-layout.html
+++ b/templates/default_site/layouts.group/.site-layout.html
@@ -123,7 +123,14 @@
 				</div>
 			</div>
 
-			<div class="col-md-6 widget">
+			<div class="col-md-1 widget">
+				<div class="widget-body">
+					<p class="text-right">
+						<a href="/sitemap.xml">Sitemap</a><br>
+					</p>
+				</div>
+			</div>
+			<div class="col-md-5 widget">
 				<div class="widget-body">
 					<p class="text-right">
 						Copyright &copy; {current_time format="%Y"} by David D'Antonio<br> 
