Add micro.blog verification link

--- a/templates/default_site/layouts.group/.site-layout.html
+++ b/templates/default_site/layouts.group/.site-layout.html
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" href="{stylesheet='styles/styles'}" type="text/css">
 
 	<!--[if lt IE 9]> <script src="assets/js/html5shiv.js"></script> <![endif]-->
+	<!-- Micro.blog site verification data -->
+  <link href="https://micro.blog/DDA" rel="me" />
 </head>
 <body class="{layout:body-class}">
 
