micro.blog styling
- Currently not used as I need to figure out where to put it

--- a/local files/less/styles.less
+++ b/local files/less/styles.less
@@ -540,6 +540,16 @@ footer.entry-meta {
 }		
 
 
+/** Micro.blog styling */
+.microblog_timeline {
+}
+.microblog_post {
+  font-size: 1.2em;
+}
+.microblog_time {
+  font-size: 0.9em;
+  font-style: italic;
+}
 
 
 
