--- a/templates/default_site/styles.group/styles.css
+++ b/templates/default_site/styles.group/styles.css
@@ -988,6 +988,14 @@ footer.entry-meta .meta-in {
   float: left;
   margin: 0 10px 0 0;
 }
+/** Micro.blog styling */
+.microblog_post {
+  font-size: 1.2em;
+}
+.microblog_time {
+  font-size: 0.9em;
+  font-style: italic;
+}
 /* Max page width
 /////////////////////////////////////////////////////////////////////*/
 @media (min-width: 1200px) {
