--- a/local files/less/styles.less
+++ b/local files/less/styles.less
@@ -310,6 +310,7 @@ article.post, article.piece {
     	.font-size(1.35);
     	font-style: italic;
     	margin-bottom: 1em;
+    	margin-top: 0.7em;
   	}
   	
   	img {
