Update portfolio index to use the portfolio_meta snippet

--- a/templates/default_site/portfolio.group/index.html
+++ b/templates/default_site/portfolio.group/index.html
@@ -11,7 +11,7 @@
        				<article class="post">
       					<header class="entry-header">
        						<h1 class="entry-title{if status == "Draft"} entry-draft {/if}"><a href="{title_permalink="portfolio/piece"}" rel="bookmark">{title}</a></h1>
-                    {snippet_blog_meta}
+                    {snippet_portfolio_meta}
       					</header> 
       					<div class="entry-content clearfix">
           				{if pf_featured_image}
