Use the updated vs published snippet rather than just published
- Use the new snippet everwhere we display “published”

--- a/templates/default_site/_partials/snippet_portfolio_meta.html
+++ b/templates/default_site/_partials/snippet_portfolio_meta.html
@@ -1,6 +1,6 @@
  						<div class="entry-meta clearfix"> 
               <div class="pull-left posted-on">
-              	<time class="entry-date published" date="{edit_date}">Published {edit_date:relative}</time>
+                {snippet_published_or_updated}
               </div>
               <div class="entry-meta pull-right">
               	Filed in:&nbsp;{categories backspace="2"}<a {if category_description}alt="{category_description}" title="{category_description}"{/if} href="{path='portfolio/index'}">{category_name}</a>, {/categories}
