--- a/templates/default_site/_partials/snippet_blog_article_meta.html
+++ b/templates/default_site/_partials/snippet_blog_article_meta.html
@@ -1,6 +1,6 @@
               <div class="entry-meta clearfix"> 
                 <div class="pull-left posted-on">
-                  <time class="entry-date published" date="{edit_date}">Published {edit_date:relative}</time>
+                  {snippet_published_or_updated}
                   <time class="entry-date published hidden" date="{entry_date}" itemprop="datePublished">{entry_date format="{DATE_ISO8601}"}</time>
                   <time class="entry-date published hidden" date="{edit_date}" itemprop="dateModified">{edit_date format="{DATE_ISO8601}"}</time>
 
