--- a/templates/default_site/_partials/snippet_published_or_updated.html
+++ b/templates/default_site/_partials/snippet_published_or_updated.html
@@ -1,4 +1,4 @@
-                  {if edit_date == entry_date}
+                  {if edit_date < (entry_date + 86400)}
                     <time class="entry-date published" date="{entry_date}">Published {entry_date:relative}</time>
                   {if:else}
                     <time class="entry-date published" date="{edit_date}">Updated {edit_date:relative}</time>
