Another “updated vs published” change
- Show Updated if the relative time shown for edit_date is different than the entry_date. If something happened months ago, who cares if it was edited 2 days after it was published.

--- a/templates/default_site/_partials/snippet_published_or_updated.html
+++ b/templates/default_site/_partials/snippet_published_or_updated.html
@@ -1,4 +1,4 @@
-                  {if edit_date < (entry_date + 86400)}
+                  {if entry_date:relative == edit_date:relative}
                     <time class="entry-date published" date="{entry_date}">Published {entry_date:relative}</time>
                   {if:else}
                     <time class="entry-date published" date="{edit_date}">Updated {edit_date:relative}</time>
