--- a/local files/less/styles.less
+++ b/local files/less/styles.less
@@ -187,6 +187,14 @@ img { max-width: 100%; }
 
 	li{ margin-bottom:30px; }
 	.details { display:block; text-align: center; .font-size( 1.2 ); padding-bottom: 1em;}
+	
+	.card {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    padding: 0;
+    box-shadow: 2px 2px 10px 0px rgba(102, 102, 102, 0.5);
+    border-radius: 6px;
+	}
 }
 
 .thumbnail {
