--- a/templates/default_site/layouts.group/.site-layout.html
+++ b/templates/default_site/layouts.group/.site-layout.html
@@ -73,7 +73,7 @@
 				<h3 class="widget-title">Contact</h3>
 				<div class="widget-body">
 					<p>
-						<a href="mailto:design.remove-this@dantonio.net">design[AT]dantonio[DOT]net</a><br>
+						<a href="mailto:design.remove-this@dantonio.net">design at dantonio dot net</a><br>
 					</p>	
 				</div>
 			</div>
